Correção de testes e ajuste de endpoint removido no bloco try